--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -122,3 +122,12 @@
   background-position: center;
   height: 100vh;
 }
+
+.contact-banner {
+  /* background: url("../assets/image/retail.jpeg"); */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../assets/image/contact.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 70vh;
+}
